--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -69,6 +69,7 @@ body {
   color: white;
   border: 2px solid #dee807; /* Add a 2px border around the navbar */
   width: 80%; /* Adjust the width as needed */
+  margin: 20px auto; /* Center the navbar */
 }
 
 .navbar a {
